sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Specific_Course_Undertaken__c.field-meta.xml
<CustomField>
    <fullName>Specific_Course_Undertaken__c</fullName>
    <description>Specific Course Undertaken</description>
    <inlineHelpText>Specific Course Undertaken</inlineHelpText>
    <label>Specific Course Undertaken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Agricultural Biosystem</fullName>
            </value>
            <value>
                <fullName>Agricultural Biosystems and Management</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Agronomy</fullName>
            </value>
            <value>
                <fullName>Analytical Chemistry</fullName>
            </value>
            <value>
                <fullName>Architectural Engineering Design</fullName>
            </value>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Automotive Engineering</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree-Business Management majoring in Human Resource Management</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree-Business Management-Majoring in Maritime Business Management</fullName>
            </value>
            <value>
                <fullName>Banking and Financial Services</fullName>
            </value>
            <value>
                <fullName>Biological Sciences</fullName>
            </value>
            <value>
                <fullName>Biomechanical &amp; Processing Engineering</fullName>
            </value>
            <value>
                <fullName>Business Administration</fullName>
            </value>
            <value>
                <fullName>Business Administration/Management</fullName>
            </value>
            <value>
                <fullName>Business Mamangement</fullName>
            </value>
            <value>
                <fullName>Certificate in Project Management</fullName>
            </value>
            <value>
                <fullName>Chemical Engineering</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Commerce-Accounting</fullName>
            </value>
            <value>
                <fullName>Commerce-Human Resource Management option</fullName>
            </value>
            <value>
                <fullName>Communication &amp; Media</fullName>
            </value>
            <value>
                <fullName>Community Health &amp; Development</fullName>
            </value>
            <value>
                <fullName>Computer Application</fullName>
            </value>
            <value>
                <fullName>Computer Technology</fullName>
            </value>
            <value>
                <fullName>Development Studies</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Electrical Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>