sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Talent_Partner__c.field-meta.xml
<CustomField>
    <fullName>Talent_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Talent Partner</description>
    <inlineHelpText>Talent Partner</inlineHelpText>
    <label>Talent Partner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees (Talent Partner)</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>