sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Talent_Partner_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>Talent_Partner_SF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Partner SF Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees4</relationshipName>
    <type>Lookup</type>
</CustomField>