sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Tickets_Created__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tickets Created</label>
    <type>Checkbox</type>
</CustomField>