sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Work Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>