sfSandBoxCode/force-app/main/default/objects/Employee__c/fields/X3_Month_Probation_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>X3_Month_Probation_Review_Date__c</fullName>
    <description>3 Month Probation Review Date</description>
    <inlineHelpText>3 Month Probation Review Date</inlineHelpText>
    <label>3 Month Probation Review Date</label>
    <type>Date</type>
</CustomField>