sfSandBoxCode/force-app/main/default/objects/Employee__c/validationRules/Employee_Role_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Role_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(  Employee_Role__c ), AND($User.Id != &#39;005D0000008tWxc&#39;, $User.Id != &#39;005D000000ApycU&#39;,$User.Id !=&#39;005D0000004Derm&#39;,$User.Id != &#39;005D0000004ZrkJ&#39;,$User.Id != &#39;005D0000008kHZI&#39;))</errorConditionFormula>
    <errorDisplayField>Employee_Role__c</errorDisplayField>
    <errorMessage>You not have permission to edit this field</errorMessage>
</ValidationRule>