sfSandBoxCode/force-app/main/default/objects/Employee__c/validationRules/UpdateLeaveGroupValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateLeaveGroupValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Leave_Group__c ),
OR(ISPICKVAL( Employment_Status__c ,&#39;Casual&#39;),
ISPICKVAL(Employment_Status__c , &#39;Consultant&#39;),
ISPICKVAL(Employment_Status__c , &#39;Fellow&#39;),
ISPICKVAL(Employment_Status__c , &#39;Terminated&#39;))
)</errorConditionFormula>
    <errorMessage>Consultants, Terminated, Fellows and Casuals have no leave group</errorMessage>
</ValidationRule>