sfSandBoxCode/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Company_Division__c</columns>
    <columns>Sanergy_Department__c</columns>
    <columns>Sanergy_Department_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Primary_Location__c</columns>
    <columns>Employment_Status__c</columns>
    <columns>Employee_Active__c</columns>
    <columns>Line_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>